[gd_scene load_steps=3 format=2]

[ext_resource path="res://Fonts/Theme.tres" type="Theme" id=1]
[ext_resource path="res://Scripts/Bills.gd" type="Script" id=2]

[node name="Bills" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 1080.0
margin_bottom = 1920.0
color = Color( 0.027451, 0.572549, 0.596078, 1 )

[node name="TitleLabel" type="Label" parent="Background"]
margin_left = 140.0
margin_top = 157.0
margin_right = 228.0
margin_bottom = 211.0
text = "Tytuł"

[node name="AmountLabel" type="Label" parent="Background"]
margin_left = 134.0
margin_top = 287.0
margin_right = 228.0
margin_bottom = 333.0
text = "Kwota"

[node name="AmountInput" type="LineEdit" parent="Background"]
margin_left = 267.0
margin_top = 286.0
margin_right = 967.0
margin_bottom = 346.0

[node name="TitleInput" type="LineEdit" parent="Background"]
margin_left = 267.0
margin_top = 144.0
margin_right = 967.0
margin_bottom = 204.0

[node name="ScrollContainer" type="ScrollContainer" parent="Background"]
margin_left = 58.0
margin_top = 487.0
margin_right = 1012.0
margin_bottom = 1146.0
rect_min_size = Vector2( 700, 300 )

[node name="VBoxContainer" type="VBoxContainer" parent="Background/ScrollContainer"]
custom_constants/separation = 10

[node name="SendButton" type="Button" parent="Background"]
margin_left = 424.0
margin_top = 1165.0
margin_right = 724.0
margin_bottom = 1315.0
text = "Prześlij"

[node name="Notification" type="Label" parent="Background"]
margin_left = 328.0
margin_top = 1100.0
margin_right = 783.0
margin_bottom = 1147.0

[node name="Result" type="Label" parent="Background"]
margin_left = 132.0
margin_top = 376.0
margin_right = 922.0
margin_bottom = 449.0

[node name="AmountlyCheckButton" type="CheckButton" parent="Background"]
margin_left = 896.0
margin_top = -22.0
margin_right = 972.0
margin_bottom = 81.0
rect_min_size = Vector2( 30, 30 )
rect_scale = Vector2( 2, 2 )

[node name="AmountlyLabel" type="Label" parent="Background"]
margin_left = 736.0
margin_top = 52.0
margin_right = 886.0
margin_bottom = 100.0
text = "Ilościowo"

[node name="BackButton" type="Button" parent="Background"]
margin_left = 424.0
margin_top = 1344.0
margin_right = 724.0
margin_bottom = 1494.0
text = "Powrót"

[node name="CustomLabel" type="Label" parent="Background"]
margin_left = 50.0
margin_top = 60.0
margin_right = 200.0
margin_bottom = 108.0
text = "Kwotowo"

[node name="CustomCheckButton" type="CheckButton" parent="Background"]
margin_left = 196.0
margin_top = -18.0
margin_right = 272.0
margin_bottom = 85.0
rect_scale = Vector2( 2, 2 )

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="pressed" from="Background/SendButton" to="." method="_on_SendButton_pressed"]
[connection signal="pressed" from="Background/AmountlyCheckButton" to="." method="_on_AmountlyCheckButton_pressed"]
[connection signal="pressed" from="Background/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="Background/CustomCheckButton" to="." method="_on_CustomCheckButton_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
